<resources>
    <string name="app_name">[removed]</string>
    <string name="app_name_test">[removed] test</string>
    <string name="dev_email">humzaman.dev@gmail.com</string>

    <string name="view_on_reddit">View on reddit</string>
    <string name="view_on_removeddit">View on Removeddit</string>
    <string name="view_on_unddit">View on Unddit</string>
    <string name="view_on_undelete">View on Undelete</string>
    <string name="more_details">More details</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="deleted">[deleted]</string>

    <string name="note">\nNOTE:\nDue to Pushshift\'s nature as an archive tool, information displayed here may not accurately reflect what is currently displayed on reddit.\n<a href="https://www.reddit.com/bcxguf">Click here for more info</a>"</string>
    <string name="author">Author: </string>
    <string name="score">Score: </string>
    <string name="subreddit">Subreddit: </string>
    <string name="submitted">Submitted (UTC): </string>
    <string name="archived">Archived (UTC): </string>
    <string name="authorID">Author ID: </string>
    <string name="commentID">Comment ID: </string>
    <string name="parentID">Parent ID: </string>
    <string name="linkID">Link ID: </string>
    <string name="subredditID">Subreddit ID: </string>

    <string name="aboutMessage">Developed by Humza with ❤️\n\nView source code and contribute:\nhttps://github.com/humzakh/removed\n\n\nSpecial thanks to:\nJason Baumgartner (pushshift.io)\n\npullpush.io</string>

    <string name="removed_quick">[removed too quickly to be archived]</string>
    <string name="not_archived">[no archived data found]</string>
    <string name="main_title">How to use [removed]</string>
    <string name="main_intro">View [removed] or [deleted] reddit comments\nwith just three simple steps:</string>
    <string name="main_instructions">1. Share the comment.\n\n2. Choose [removed] from the list.\n\n3. Enjoy the unremoved comment!</string>
    <string name="main_try">Try it out in your favorite reddit app,\nor use the button below for a demonstration.</string>
    <string name="button">Share comment</string>

    <string name="tv_username">UsernameTesting12345</string>
    <string name="tv_score">69 points</string>
    <string name="tv_submitted">7 days ago</string>
    <string name="tv_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a dictum magna, faucibus porta elit. Quisque egestas placerat augue, sit amet iaculis felis fringilla sed. Nullam dapibus, lacus eget varius fringilla, metus odio luctus orci, et posuere ante libero ac mauris. Vivamus consectetur orci et metus congue cursus. Etiam mollis, urna non elementum tincidunt, felis ligula sodales est, non lacinia nibh quam et urna. Donec eget sollicitudin ligula. Aliquam id molestie augue. Nunc ac libero ultrices, rutrum ante vitae, interdum odio. Aenean enim lorem, scelerisque at elit eu, blandit convallis nulla.\n\nInteger eu ex mattis, dictum magna a, dapibus neque. Sed varius blandit dui, pulvinar blandit tortor. Proin ligula ante, feugiat a nulla et, ornare vehicula lectus. Sed tempus nibh vel ultricies mollis. Nullam dapibus euismod tincidunt. Maecenas fermentum mollis commodo. Curabitur neque nibh, feugiat id vulputate eu, porttitor et nunc. Aenean nec augue leo. Nam vulputate dictum venenatis. Suspendisse nec sapien tortor. Nullam sit amet elementum metus.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a dictum magna, faucibus porta elit. Quisque egestas placerat augue, sit amet iaculis felis fringilla sed. Nullam dapibus, lacus eget varius fringilla, metus odio luctus orci, et posuere ante libero ac mauris. Vivamus consectetur orci et metus congue cursus. Etiam mollis, urna non elementum tincidunt, felis ligula sodales est, non lacinia nibh quam et urna. Donec eget sollicitudin ligula. Aliquam id molestie augue. Nunc ac libero ultrices, rutrum ante vitae, interdum odio. Aenean enim lorem, scelerisque at elit eu, blandit convallis nulla.\n\nInteger eu ex mattis, dictum magna a, dapibus neque. Sed varius blandit dui, pulvinar blandit tortor. Proin ligula ante, feugiat a nulla et, ornare vehicula lectus. Sed tempus nibh vel ultricies mollis. Nullam dapibus euismod tincidunt. Maecenas fermentum mollis commodo. Curabitur neque nibh, feugiat id vulputate eu, porttitor et nunc. Aenean nec augue leo. Nam vulputate dictum venenatis. Suspendisse nec sapien tortor. Nullam sit amet elementum metus.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a dictum magna, faucibus porta elit. Quisque egestas placerat augue, sit amet iaculis felis fringilla sed. Nullam dapibus, lacus eget varius fringilla, metus odio luctus orci, et posuere ante libero ac mauris. Vivamus consectetur orci et metus congue cursus. Etiam mollis, urna non elementum tincidunt, felis ligula sodales est, non lacinia nibh quam et urna. Donec eget sollicitudin ligula. Aliquam id molestie augue. Nunc ac libero ultrices, rutrum ante vitae, interdum odio. Aenean enim lorem, scelerisque at elit eu, blandit convallis nulla.\n\nInteger eu ex mattis, dictum magna a, dapibus neque. Sed varius blandit dui, pulvinar blandit tortor. Proin ligula ante, feugiat a nulla et, ornare vehicula lectus. Sed tempus nibh vel ultricies mollis. Nullam dapibus euismod tincidunt. Maecenas fermentum mollis commodo. Curabitur neque nibh, feugiat id vulputate eu, porttitor et nunc. Aenean nec augue leo. Nam vulputate dictum venenatis. Suspendisse nec sapien tortor. Nullam sit amet elementum metus.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a dictum magna, faucibus porta elit. Quisque egestas placerat augue, sit amet iaculis felis fringilla sed. Nullam dapibus, lacus eget varius fringilla, metus odio luctus orci, et posuere ante libero ac mauris. Vivamus consectetur orci et metus congue cursus. Etiam mollis, urna non elementum tincidunt, felis ligula sodales est, non lacinia nibh quam et urna. Donec eget sollicitudin ligula. Aliquam id molestie augue. Nunc ac libero ultrices, rutrum ante vitae, interdum odio. Aenean enim lorem, scelerisque at elit eu, blandit convallis nulla.\n\nInteger eu ex mattis, dictum magna a, dapibus neque. Sed varius blandit dui, pulvinar blandit tortor. Proin ligula ante, feugiat a nulla et, ornare vehicula lectus. Sed tempus nibh vel ultricies mollis. Nullam dapibus euismod tincidunt. Maecenas fermentum mollis commodo. Curabitur neque nibh, feugiat id vulputate eu, porttitor et nunc. Aenean nec augue leo. Nam vulputate dictum venenatis. Suspendisse nec sapien tortor. Nullam sit amet elementum metus.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a dictum magna, faucibus porta elit. Quisque egestas placerat augue, sit amet iaculis felis fringilla sed. Nullam dapibus, lacus eget varius fringilla, metus odio luctus orci, et posuere ante libero ac mauris. Vivamus consectetur orci et metus congue cursus. Etiam mollis, urna non elementum tincidunt, felis ligula sodales est, non lacinia nibh quam et urna. Donec eget sollicitudin ligula. Aliquam id molestie augue. Nunc ac libero ultrices, rutrum ante vitae, interdum odio. Aenean enim lorem, scelerisque at elit eu, blandit convallis nulla.\n\nInteger eu ex mattis, dictum magna a, dapibus neque. Sed varius blandit dui, pulvinar blandit tortor. Proin ligula ante, feugiat a nulla et, ornare vehicula lectus. Sed tempus nibh vel ultricies mollis. Nullam dapibus euismod tincidunt. Maecenas fermentum mollis commodo. Curabitur neque nibh, feugiat id vulputate eu, porttitor et nunc. Aenean nec augue leo. Nam vulputate dictum venenatis. Suspendisse nec sapien tortor. Nullam sit amet elementum metus.</string>
    <string name="u2022">\t• \t</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
