<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/mainToolbar"
        layout="@layout/main_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:layout_weight="1"
            android:textColor="?android:attr/textColorPrimary" />

        <Spinner
            android:id="@+id/spinner"
            android:entries="@array/app_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"
            android:text="@string/main_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/main_intro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/main_instructions"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="24dp"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/main_try"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button"
            android:onClick="buttonClick"
            android:textColor="#fff"/>

    </LinearLayout>

</LinearLayout>