<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_corners_rounded">

    <include
        layout="@layout/bottomsheet_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textColor="@color/white"
                    android:background="@drawable/author_background"
                    android:text="@string/tv_username" />

                <TextView
                    android:id="@+id/tv_bullet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/white"
                    android:text="@string/u2022" />

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textColor="@color/white"
                    android:text="@string/tv_score" />

                <TextView
                    android:id="@+id/tv_submitted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="end"
                    android:textColor="@color/white"
                    android:text="@string/tv_submitted" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:textColor="@color/white"
                android:text="@string/tv_body"
                android:textIsSelectable="true"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>